04-blue-green/03-route-v1-100.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: fib-knative-route
spec:
  traffic:
    - revisionName: fib-knative-config-6p8bx
      percent: 100
