04-blue-green/04-route-v1-100-v2-0.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: fib-knative-route # Route name is unchanged, since we're updating an existing Route
spec:
  traffic:
    - revisionName: fib-knative-config-rq25r
      percent: 100 # All traffic still going to the first revision
    - revisionName: fib-knative-config-plx42
      percent: 0 # 0% of traffic routed to the second revision
      tag: v2 # A named route
