04-blue-green/06-route-v1-0-v2-100.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: fib-knative-route # Route name is unchanged, since we're updating an existing Route
spec:
  traffic:
    - revisionName: fib-knative-config-rq25r
      percent: 0 # All traffic still going to the first revision
      tag: v1
    - revisionName: fib-knative-config-plx42
      percent: 100 # 0% of traffic routed to the second revision
